# test_fastapi_redis_go

./: .gitignore  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  result_worker.py  task.py
go_worker/: Dockerfile  go.mod
go_worker/cmd/worker/: main.go
go_worker/internal/config/: config.go
go_worker/internal/httpserver/: health.go
go_worker/internal/model/: benefit.go  rating.go  scenario.go  task.go
go_worker/internal/queue/: redis.go
go_worker/internal/service/: benefit.go  rating.go  report.go  scenario.go
go_worker/internal/worker/: worker.go
